--- a/src/Components/Notes/style/Notes.css
+++ b/src/Components/Notes/style/Notes.css
@@ -44,11 +44,13 @@
 
 .textNote {
     font-size: 25px;
+    white-space: pre;
 }
 
 .titleNote {
     font-size: 35px;
     color: rgba(11, 91, 11, 0.82);
+    white-space: pre;
 }
 
 .input {
